--- a/1_iris.ipynb
+++ b/1_iris.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5EYH1wyODe3vNzQW84TD7",
+      "authorship_tag": "ABX9TyPp+NNdymZBtYWmjuZZXohn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 423
+          "height": 441
         },
         "id": "ucQnCDx1Xwke",
         "outputId": "0c11f891-849e-4458-fedc-d937f1419206"
@@ -474,6 +474,51 @@
         "df[\"y\"] = iris[\"target\"]\n",
         "df"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. 資料筆數: 看問題難度(越簡單就少) -> x多寡\n",
+        "\n",
+        "a. 機器學習: 幾千-幾萬  \n",
+        "b. 深度學習: 幾萬-幾十萬筆"
+      ],
+      "metadata": {
+        "id": "HsI-yMUYepJ6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# drop\n",
+        "# Demo: axis的選擇 0/1\n",
+        "# d = pd.DataFrame([\n",
+        "#     [1, 2],\n",
+        "#     [3, 4]\n",
+        "# ])\n",
+        "# d.drop(0, axis=1)\n",
+        "x = df.drop(\"y\", axis=1)\n",
+        "y = df[\"y\"]"
+      ],
+      "metadata": {
+        "id": "yYa4LXjtgXCy"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "# train_test_split([1, 2, 3, 4], [5, 6, 7, 8], test_size=0.25)\n",
+        "# 0.9x 0.1x 0.9y 0.1y\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.1)"
+      ],
+      "metadata": {
+        "id": "_he36R5qeolM"
+      },
+      "execution_count": 19,
+      "outputs": []
     }
   ]
 }
