--- a/3_titanic.ipynb
+++ b/3_titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+JAfKr7mGXRtB69E6P4aC",
+      "authorship_tag": "ABX9TyNJrtLT1NyqvyVU4Bq6ex9k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -615,7 +615,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 877
+          "height": 0
         },
         "collapsed": true,
         "id": "dJSK_ypWQwxh",
@@ -1158,6 +1158,61 @@
         "id": "p31-PGzHdJ3B"
       },
       "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Everything is an object\n",
+        "# 每種東西都有形態, 每個型態都有自己可做的操作\n",
+        "# 字典型態: dict 操作: [key]\n",
+        "# 函式型態: print 操作: (3)\n",
+        "# a = int\n",
+        "# a(4.7)\n",
+        "# def func(mode):\n",
+        "#   if mode == 0:\n",
+        "#     return int\n",
+        "#   else:\n",
+        "#     return round\n",
+        "# func(1)(4.7)"
+      ],
+      "metadata": {
+        "id": "xjnlSDXNeZUy"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Series.apply(func)\n",
+        "# def func(n):\n",
+        "#   if n <= 1:\n",
+        "#     return 0\n",
+        "#   else:\n",
+        "#     return n ** 2\n",
+        "# s = pd.Series([1, 2, 3])\n",
+        "# s.apply(func)"
+      ],
+      "metadata": {
+        "id": "fe5ZYIw2hqxa"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# s = \"Braund, Mr. Owen Harris\"\n",
+        "# s.split(\",\")[-1].split(\".\")[0].strip()\n",
+        "def func(s):\n",
+        "  return s.split(\",\")[-1].split(\".\")[0].strip()\n",
+        "datas[\"Name\"] = datas[\"Name\"].apply(func)"
+      ],
+      "metadata": {
+        "id": "0WGgc0Utibbo"
+      },
+      "execution_count": 27,
       "outputs": []
     }
   ]
