--- a/3_titanic.ipynb
+++ b/3_titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJrtLT1NyqvyVU4Bq6ex9k",
+      "authorship_tag": "ABX9TyMFV15D4HgDAymMLq1Uiv42",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1213,6 +1213,31 @@
         "id": "0WGgc0Utibbo"
       },
       "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def func(s):\n",
+        "  if pd.isna(s):\n",
+        "    return s\n",
+        "  else:\n",
+        "    return s[0]\n",
+        "datas[\"Cabin\"] = datas[\"Cabin\"].apply(func)"
+      ],
+      "metadata": {
+        "id": "p1GgFffemWft"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "q95YDBjXmnSU"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
