--- a/3_titanic.ipynb
+++ b/3_titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4PQ26//PIHP3XV3NsuXrP",
+      "authorship_tag": "ABX9TyPC+oowBuxNFtGQrAhYqV36",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1751,6 +1751,51 @@
           "execution_count": 35
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = datas.isna().sum()\n",
+        "# 篩選: Series/DataFrame[跟你資料筆數依樣多的True/False]\n",
+        "fil = s > 0\n",
+        "s[fil]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8OCb1LVOojFj",
+        "outputId": "438e2cd3-e2c5-4093-a7d9-61d64f3c21ae"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Age          263\n",
+              "Fare           1\n",
+              "Cabin       1014\n",
+              "Embarked       2\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "most = datas[\"Embarked\"].value_counts().idxmax()\n",
+        "datas[\"Embarked\"] = datas[\"Embarked\"].fillna(most)"
+      ],
+      "metadata": {
+        "id": "905wJaStpbxv"
+      },
+      "execution_count": 44,
+      "outputs": []
     }
   ]
 }
