--- a/3_titanic.ipynb
+++ b/3_titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPC+oowBuxNFtGQrAhYqV36",
+      "authorship_tag": "ABX9TyOCRrLANFFctHf4TkaVrgjy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1796,6 +1796,52 @@
       },
       "execution_count": 44,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d = datas.dtypes\n",
+        "fil = d != \"object\"\n",
+        "num_columns = d[fil].drop(\"Pclass\").index\n",
+        "med = datas[num_columns].median()\n",
+        "datas = datas.fillna(med)"
+      ],
+      "metadata": {
+        "id": "Ky6QQkRsrDSr"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# check na again\n",
+        "s = datas.isna().sum()\n",
+        "# 篩選: Series/DataFrame[跟你資料筆數依樣多的True/False]\n",
+        "fil = s > 0\n",
+        "s[fil]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7VMZoZNNs-2X",
+        "outputId": "be19ca8a-216b-43e4-d385-0a836c734804"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Cabin    1014\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
     }
   ]
 }
