--- a/3_titanic.ipynb
+++ b/3_titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCRrLANFFctHf4TkaVrgjy",
+      "authorship_tag": "ABX9TyMAboOgFYBFGjDiHi/U3jzF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -600,7 +600,10 @@
         "\n",
         "i. 類別型: 最常出現!!\n",
         "\n",
-        "ii. 數值型: 中位數"
+        "ii. 數值型: 中位數\n",
+        "\n",
+        "\n",
+        "b. 類別型: One-Hot"
       ],
       "metadata": {
         "id": "YEEo00MMS4yw"
@@ -1840,6 +1843,62 @@
           },
           "metadata": {},
           "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "我的稱謂只保留幾個主要是美觀因素\n",
+        "\n",
+        "其他 0 0 0 -> 一種補類別值的方式"
+      ],
+      "metadata": {
+        "id": "QimRjiVMx0fn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "datas[\"Name\"].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IU4eFWvWwmtA",
+        "outputId": "eeebbaf1-8739-4812-9c0f-5fea5dca7bd7"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Name\n",
+              "Mr              757\n",
+              "Miss            260\n",
+              "Mrs             197\n",
+              "Master           61\n",
+              "Rev               8\n",
+              "Dr                8\n",
+              "Col               4\n",
+              "Mlle              2\n",
+              "Major             2\n",
+              "Ms                2\n",
+              "Lady              1\n",
+              "Sir               1\n",
+              "Mme               1\n",
+              "Don               1\n",
+              "Capt              1\n",
+              "the Countess      1\n",
+              "Jonkheer          1\n",
+              "Dona              1\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
         }
       ]
     }
