--- a/3_titanic.ipynb
+++ b/3_titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4mSqoyHgyXLivuK0m+Des",
+      "authorship_tag": "ABX9TyMQOF9L4GAIfXylxLnAuJNe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1887,6 +1887,32 @@
         "id": "I7R_P9iJF9cs"
       },
       "execution_count": 80,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 額外一步: 靠賽, 想辦法提供給更多的訊息\n",
+        "datas[\"Family\"] = datas[\"SibSp\"] + datas[\"Parch\"]"
+      ],
+      "metadata": {
+        "id": "tDhfNfIxI61C"
+      },
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "scaler = MinMaxScaler()\n",
+        "datas_scaled = pd.DataFrame(scaler.fit_transform(datas),\n",
+        "               columns=datas.columns)"
+      ],
+      "metadata": {
+        "id": "APFDJYFSOr2x"
+      },
+      "execution_count": 87,
       "outputs": []
     }
   ]
