--- a/3_titanic.ipynb
+++ b/3_titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQOF9L4GAIfXylxLnAuJNe",
+      "authorship_tag": "ABX9TyOvaHIMv1XU1AP6f55nBsXI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 825
+          "height": 826
         },
         "id": "x9VkZIG3Pjw4",
         "outputId": "a0bdbb11-abc2-4b71-ee15-bc3a96ee8f1b"
@@ -618,7 +618,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 877
+          "height": 878
         },
         "collapsed": true,
         "id": "dJSK_ypWQwxh",
@@ -1259,7 +1259,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 443
+          "height": 444
         },
         "id": "ADmtPkLknfmF",
         "outputId": "122711d9-d8aa-4035-ee9d-198231d84196"
@@ -1913,6 +1913,37 @@
         "id": "APFDJYFSOr2x"
       },
       "execution_count": 87,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# d = pd.DataFrame([\n",
+        "#     [\"a\", \"b\"],\n",
+        "#     [\"c\", \"d\"],\n",
+        "#     [\"e\", \"f\"]\n",
+        "# ], index=[0, 1, 0])\n",
+        "# # iloc: 第幾列 loc: 列標籤\n",
+        "# d.loc[0]"
+      ],
+      "metadata": {
+        "id": "HJGk-fgORt8G"
+      },
+      "execution_count": 91,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = datas.iloc[:len(train)]\n",
+        "x_predict = datas.iloc[len(train):]\n",
+        "x_scaled = datas_scaled.iloc[:len(train)]\n",
+        "x_predict_scaled = datas_scaled.iloc[len(train):]"
+      ],
+      "metadata": {
+        "id": "VxfIkS5wSXv3"
+      },
+      "execution_count": 94,
       "outputs": []
     }
   ]
