--- a/3_titanic.ipynb
+++ b/3_titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvaHIMv1XU1AP6f55nBsXI",
+      "authorship_tag": "ABX9TyO1WJzAkBb1x/1uYwDdEAdW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 826
+          "height": 825
         },
         "id": "x9VkZIG3Pjw4",
         "outputId": "a0bdbb11-abc2-4b71-ee15-bc3a96ee8f1b"
@@ -618,7 +618,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 878
+          "height": 877
         },
         "collapsed": true,
         "id": "dJSK_ypWQwxh",
@@ -1259,7 +1259,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 444
+          "height": 443
         },
         "id": "ADmtPkLknfmF",
         "outputId": "122711d9-d8aa-4035-ee9d-198231d84196"
@@ -1945,6 +1945,76 @@
       },
       "execution_count": 94,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = train[\"Survived\"]"
+      ],
+      "metadata": {
+        "id": "fdMFp4CRWj-k"
+      },
+      "execution_count": 95,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "\n",
+        "for i in range(2, 30):\n",
+        "  clf = KNeighborsClassifier(n_neighbors=i)\n",
+        "  scores = cross_val_score(clf, x_scaled, y, cv=10)\n",
+        "  avg = np.average(scores)\n",
+        "  print(i, \":\", avg)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "id": "DXi3-s-7V4FN",
+        "outputId": "ba499aea-eb90-4ae6-99b7-df2ec56c2a9e"
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 : 0.7901747815230962\n",
+            "3 : 0.8193757802746566\n",
+            "4 : 0.8058801498127341\n",
+            "5 : 0.8170786516853932\n",
+            "6 : 0.8227091136079899\n",
+            "7 : 0.832796504369538\n",
+            "8 : 0.8136828963795256\n",
+            "9 : 0.8125842696629213\n",
+            "10 : 0.8058676654182271\n",
+            "11 : 0.818214731585518\n",
+            "12 : 0.8069787765293384\n",
+            "13 : 0.8137203495630463\n",
+            "14 : 0.8125842696629213\n",
+            "15 : 0.8227215980024967\n",
+            "16 : 0.8137203495630463\n",
+            "17 : 0.8193508114856429\n",
+            "18 : 0.8137203495630461\n",
+            "19 : 0.8137203495630463\n",
+            "20 : 0.8170536828963794\n",
+            "21 : 0.8136953807740325\n",
+            "22 : 0.8148064918851435\n",
+            "23 : 0.8148064918851435\n",
+            "24 : 0.8147940074906368\n",
+            "25 : 0.8136828963795256\n",
+            "26 : 0.8091885143570536\n",
+            "27 : 0.8058676654182273\n",
+            "28 : 0.8069538077403247\n",
+            "29 : 0.8058426966292135\n"
+          ]
+        }
+      ]
     }
   ]
 }
