--- a/3_titanic.ipynb
+++ b/3_titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1WJzAkBb1x/1uYwDdEAdW",
+      "authorship_tag": "ABX9TyOYy/Ou0bw0sG54lB+PwbGi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2015,6 +2015,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 其實7就可以, 但最高是11\n",
+        "clf = KNeighborsClassifier(n_neighbors=11)\n",
+        "clf.fit(x_scaled, y)\n",
+        "pre = clf.predict(x_predict_scaled)\n",
+        "pd.DataFrame({\n",
+        "    \"PassengerId\":test[\"PassengerId\"],\n",
+        "    \"Survived\":pre\n",
+        "}).to_csv(\"titanic_knn.csv\", encoding=\"utf-8\", index=False)"
+      ],
+      "metadata": {
+        "id": "aDz2cexnYFlj"
+      },
+      "execution_count": 106,
+      "outputs": []
     }
   ]
 }
